<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.start.StartActivity">

    <ImageView
        android:id="@+id/design1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/design_satu"
        android:contentDescription="@string/cd_design1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/design2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/design_dua"
        android:contentDescription="@string/cd_design2"
        android:layout_marginTop="120dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tvStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="228dp"
                android:text="@string/tv_start"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/design1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tvStart2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_start2"
                android:textStyle="bold"
                android:textSize="24sp"
                app:layout_constraintTop_toBottomOf="@id/tvStart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tvStart3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_start3"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/tvStart2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="266dp"
        android:layout_height="55dp"
        android:text="@string/login"
        android:layout_marginTop="34dp"
        android:backgroundTint="?attr/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/tvStart3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="266dp"
        android:layout_height="55dp"
        android:text="@string/register"
        android:layout_marginTop="6dp"
        android:backgroundTint="?attr/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>