<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.settings.SettingsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/cd_button_back"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/button_back_add_story"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/title_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cd_setting"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/purple"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/title_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/grey_700"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@id/btnBack"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/language_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language_desc"
            android:textSize="12sp"
            android:textColor="@color/grey_500"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@id/title_language"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageView
            android:id="@+id/btnLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/language_icon"
            android:layout_marginTop="78dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/cd_change_language"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:textSize="20sp"
            android:textColor="@color/grey_700"
            android:textStyle="bold"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/language_desc"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageView
            android:id="@+id/btnLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logout"
            android:contentDescription="@string/cd_logout_icon"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnLanguage"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>