<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.story.AddStoryActivity">

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/cd_button_back"
        android:layout_marginStart="20dp"
        android:src="@drawable/button_back_add_story"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    
    <TextView
        android:id="@+id/titleAddStory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_title_add_story"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="?attr/colorPrimary"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/previewImageLayout"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginTop="38dp"
        app:cardCornerRadius="24dp"
        app:layout_constraintTop_toBottomOf="@id/titleAddStory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        
        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/previewImage"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            app:riv_corner_radius="24dp"/>

    </com.google.android.material.card.MaterialCardView>
    
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCamera"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:text="@string/camera"
        android:textColor="@color/purple"
        android:background="@drawable/custom_button"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        app:backgroundTint="@null"
        app:layout_constraintTop_toBottomOf="@id/previewImageLayout"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGallery"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/custom_button"
        android:text="@string/gallery"
        android:textColor="@color/purple"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/previewImageLayout"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/locationSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_switch"
        android:layout_marginStart="16dp"
        app:switchPadding="8dp"
        app:thumbTint="@color/grey_700"
        app:layout_constraintTop_toBottomOf="@id/btnCamera"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/descriptionLayout"
        android:layout_width="300dp"
        android:layout_height="190dp"
        app:layout_constraintTop_toBottomOf="@id/btnCamera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="54dp">

        <EditText
            android:id="@+id/descriptionInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tv_hint_description"
            android:gravity="top|start"
            android:inputType="text"
            android:minLines="5"
            android:scrollbars="vertical"
            android:padding="16dp"
            android:background="@android:color/transparent"
            android:textSize="16sp"
            android:textColorHint="@color/grey_500"
            android:overScrollMode="always" />

    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/btnUploadStory"
        android:layout_width="234dp"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@id/descriptionLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:text="@string/tv_upload"/>

    <ProgressBar
        android:id="@+id/progressBarAddStory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>