<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.auth.RegisterActivity">

    <ImageView
        android:id="@+id/design1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/design_satu"
        android:contentDescription="@string/cd_design1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/button_back"
        android:contentDescription="@string/cd_button_back"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/tv_register_greeting"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/design1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:alpha="0"
        tools:alpha="100"/>

        <TextView
            android:id="@+id/tv_register_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/tv_register_desc"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/tvRegister"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:alpha="0"
            tools:alpha="100"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginHorizontal="16dp"
        app:boxStrokeColor="?attr/colorPrimary"
        app:hintTextColor="?attr/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/tv_register_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:boxCornerRadiusTopStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusBottomEnd="20dp"
        android:alpha="0"
        tools:alpha="100">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usernameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/usernameEt"
            android:maxLines="1"
            android:textSize="16sp"
            android:textColorHint="@color/grey_500"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="16dp"
        app:boxStrokeColor="?attr/colorPrimary"
        app:hintTextColor="?attr/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/usernameField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:boxCornerRadiusTopStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusBottomEnd="20dp"
        android:alpha="0"
        tools:alpha="100">

        <com.dicoding.dicodingstoryapp.utils.EmailEditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:padding="12dp"
            android:hint="@string/emailEt"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:textSize="16sp"
            android:textColorHint="@color/grey_500"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        app:boxStrokeColor="?attr/colorPrimary"
        app:hintTextColor="?attr/colorPrimary"
        app:boxCornerRadiusTopStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusBottomEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/emailField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:passwordToggleEnabled="true"
        android:alpha="0"
        tools:alpha="100">

        <com.dicoding.dicodingstoryapp.utils.PasswordEditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passwordEt"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textSize="16sp"
            android:textColorHint="@color/grey_500"/>

    </com.google.android.material.textfield.TextInputLayout>
    
    <Button
        android:id="@+id/registerButton"
        android:layout_width="266dp"
        android:layout_height="48dp"
        android:layout_marginTop="38dp"
        android:text="@string/register"
        app:layout_constraintTop_toBottomOf="@id/passwordField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:alpha="0"
        tools:alpha="100"/>

    <ProgressBar
        android:id="@+id/progressBarRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>